k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app-prod
  labels:
    name: my-app-prod
